--- a/app/views/doses/new.html.erb
+++ b/app/views/doses/new.html.erb
@@ -1,6 +1,12 @@
 <h1>Create new dose</h1>
-<%= simple_form_for [@cocktail, @dose] do |f| %>
-  <%= f.association :ingredient%>
-  <%= f.input :description%>
-  <%= f.submit %>
-<% end %>
+<div class="container">
+  <div class="row justify-content-center">
+    <div class="col-md-8">
+      <%= simple_form_for [@cocktail, @dose] do |f| %>
+        <%= f.association :ingredient%>
+        <%= f.input :description%>
+        <%= f.submit %>
+      <% end %>
+    </div>
+  </div>
+</div>
