--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -1,5 +1,21 @@
-<h1>Cocktails</h1>
 
-<% @cocktails.each do |cocktail| %>
-  <%= cocktail.name %>
-<%end%>
+<div class="banner" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url('<%= image_path 'cocktails.jpg' %>');">
+  <div class="banner-content">
+    <h1>Le Menu</h1>
+    <p>Le everything you need to have a good</p>
+    <%= link_to "Add a cocktail", new_cocktail_path, class: "btn btn-primary btn-lg" %>
+  </div>
+</div>
+<div class="container">
+  <div class="row">
+    <% @cocktails.each do |cocktail| %>
+      <div class="col-12 col-md-6 col-lg-3">
+        <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('https://source.unsplash.com/500x400/?cocktail');">
+          <div class="card-description">
+            <h2><%= link_to cocktail.name, cocktail_path(cocktail), class: 'card-link' %> </h2>
+          </div>
+        </div>
+      </div>
+    <% end %>
+  </div>
+</div>
