--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -1,21 +1,38 @@
+<div class="container mt-3">
 
-<div class="banner" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url('<%= image_path 'cocktails.jpg' %>');">
-  <div class="banner-content">
-    <h1>Le Menu</h1>
-    <p>Le everything you need to have a good</p>
-    <%= link_to "Add a cocktail", new_cocktail_path, class: "btn btn-primary btn-lg" %>
-  </div>
-</div>
-<div class="container">
   <div class="row">
+    <div class="col-12">
+      <h1>Le everything you need to have a good time.</h1>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col">
+        <p>Le <%= @cocktails.count %> cocktails.</p>
+    </div>
+  </div>
+
+  <div class="row">
+
     <% @cocktails.each do |cocktail| %>
-      <div class="col-12 col-md-6 col-lg-3">
-        <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('https://source.unsplash.com/500x400/?cocktail');">
-          <div class="card-description">
-            <h2><%= link_to cocktail.name, cocktail_path(cocktail), class: 'card-link' %> </h2>
+      <div class="col-4">
+        <div class="flat-card-header" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('https://source.unsplash.com/500x400/?cocktail');">
+          <div class="flat-card-content">
+            <div class="flat-card-title">
+              <h4><%= link_to cocktail.name, cocktail %></h4>
+            </div class="card-footer">
+            <p><%= cocktail.name %></p>
+            <div class="flex">
+              <div class="flex">
+                <i class="fas fa-glass-martini-alt"></i><i class="fas fa-glass-martini-alt"></i>
+              </div>
+              <div class="flex ml-3">
+                <i class="fas fa-dollar-sign"></i><i class="fas fa-dollar-sign"></i><i class="fas fa-dollar-sign"></i>
+              </div>
+            </div>
           </div>
         </div>
       </div>
-    <% end %>
+    <%end%>
   </div>
 </div>
