--- a/app/views/shared/_navbar.erb
+++ b/app/views/shared/_navbar.erb
@@ -1,6 +1,18 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light justify-content-between">
-  <a class="navbar-brand" href="http://localhost:3000">Le Cocktail</a>
+<div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
+  <%= link_to "#", class: "navbar-brand" do %>
+    <%="Le Cocktail" %>
+  <% end %>
+
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-</nav>
+
+
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+        <%= link_to "Add New Cocktail", new_cocktail_path, class: "btn btn-ghost" %>
+      </li>
+    </ul>
+  </div>
+</div>
